--- a/sass/buttons.scss
+++ b/sass/buttons.scss
@@ -33,7 +33,7 @@ span.btn-label.btn-label-right {
 }
 
 .btn-group-justified {
-  	display: table !important;
+  	display: table;
   	width: 100%;
   	table-layout: fixed;
   	border-collapse: separate;
