--- a/sass/datatables.scss
+++ b/sass/datatables.scss
@@ -20,6 +20,12 @@ div.dataTables_wrapper {
             width: 100%;
         }
     }
+    div.dataTables_length label {
+      width: 100%;
+      & > select {
+        width: 100%;
+      }
+    }
 
 }
 
